--- a/src/index.html
+++ b/src/index.html
@@ -5,6 +5,10 @@
   <title>Portifolio | KevinSilva</title>
   <base href="/">
   <meta name="viewport" content="width=device-width, initial-scale=1">
+
+  <!-- icons bootstrap-->
+  <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.11.3/font/bootstrap-icons.min.css">
+  
 </head>
 <body class="mat-typography">
   <app-root></app-root>
